<resources>
    <string name="app_name">FireBaseLoginAnd Saving</string>
    <string name="facebook_application_id" translatable="false">151197158885133</string>
    <string name="facebook_app_id">151197158885133</string>
    <string name="fb_login_protocol_scheme">fb151197158885133</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb151197158885133</string>
    <string name="twitter_consumer_key" translatable="false">lkAp018YxX7fsItIHE76vEmCn</string>
    <string name="twitter_consumer_secret" translatable="false">GKrgPN3TH623HDysy5oZlTG8HYijY9FHc7xjIOFx2u6q8wnM3D</string>
    <string name="empty_view_subtitle_text">Get started by adding a Trip</string>
    <string name="editor_activity_title_new_Trip">Add a Trip</string>
    <string name="action_save">Save</string>
    <string name="editor_insert_Trip_successful">Trip saved</string>
    <string name="editor_insert_Trip_failed">Error with saving Trip</string>
    <string name="category_overview">Overview</string>
    <string name="unknown_info">Unknown description</string>
    <string name="thank_you">Thank you!</string>
    <string name="permission_message">permission is necessary</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="insert_Trip_failed">fill all empty fields</string>
    <string name="Trip_Text_Name">Trip Name</string>
    <string name="TripStartPoint">Start Point</string>
    <string name="EndPoint">End point</string>
    <string name="TripDate">set Trip Date</string>
    <string name="TripNotes">Notes</string>
    <string name="RoundTrip">Round Trip Direction</string>
    <string name="TripTime">set Trip Time</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="insert_Date_First">Insert Date First</string>
    <string name="API_KEY">AIzaSyDN_VFQMYMAyOkQxYn1aUSiUL9Aa5855e4</string>
    <string name="endPointHint">set your Trip End Point</string>
    <string name="startPointHint">Set Start Point</string>
    <string name="insert_First_End">Insert First End Point Trip then Add</string>
    <string name="insert_Note">insert Note then add anther one</string>
    <string name="insert_End">insert End Point</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_history_">History</string>
    <string name="status">status</string>
    <string name="date">the date</string>
    <string name="distance">dis in kilo</string>
    <string name="durtation">time in the trip</string>
    <string name="nameofthetrip">trip name</string>
    <string name="ping">Create notification</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="ping_text">Set Seconds Until Ping</string>
    <string name="done_snoozing">Done Snoozing.</string>
    <string name="seconds_default">2</string>
    <string name="reminder_label">Reminder Text</string>
    <string name="reminder_text">Don\'t forget!</string>
    <string name="snoozing">Snoozing!</string>
    <string name="timer_start">Setting the timer</string>
    <string name="sleep_error">Sleep failure</string>
    <string name="timer_finished">Timer finished.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_history_details">HistoryDetails</string>
    <string name="todo">To Do List</string>
    <string name="dis">Distance</string>
    <string name="starttime">Start Time</string>
    <string name="arrivaltime">Arrival Time</string>
    <string name="frompoint">From:</string>
    <string name="topoint">To:</string>
    <string name="title_activity_main_scrolling">MainScrollingActivity</string>
    <string name="Status">Status</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Done">Done</string>
    <string name="FromTxt">FromTxt</string>
    <string name="ToTxt">ToTxt</string>
    <string name="StatusTxt">StatusTxt</string>
    <string name="tripNameEd">Trip Name</string>
    <string name="editTripName" />
    <string name="startPointEd">Start Point</string>
    <string name="editStartPoint" />
    <string name="endPointEd">End Point</string>
    <string name="editEndPoint" />
    <string name="roundTripEd">Round Trip</string>
    <string name="dateEd">Trip Date</string>
    <string name="timeEd">Trip Time</string>
    <string name="addNotesEd">Add Notes</string>
    <string name="notes">Notes</string>
</resources>