<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tripNameEd"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tripNameEd" />

        <EditText
            android:id="@+id/editTripName"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:text="@string/editTripName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startPointEd"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginStart="5dp"
            android:text="@string/startPointEd" />

        <TextView
            android:id="@+id/editStartPoint"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/editStartPoint" />

        <ImageView
            android:id="@+id/imageStartPointEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/edittrip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/endPointEd"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginStart="5dp"
            android:text="@string/endPointEd" />

        <TextView
            android:id="@+id/editEndPoint"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/editEndPoint" />

        <ImageView
            android:id="@+id/imageEndPointEd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/edittrip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/roundTripEd"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginStart="5dp"
            android:text="@string/roundTripEd" />

        <Switch
            android:id="@+id/editRoundTrip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateEd"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/dateEd" />


        <TextView
            android:id="@+id/editDate"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textColor="#000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageDateEd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/edittrip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeEd"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/timeEd" />


        <TextView
            android:id="@+id/editTime"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp" />

        <ImageView
            android:id="@+id/imageTimeEd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/edittrip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addNotesEd"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/addNotesEd" />

        <EditText
            android:id="@+id/editAddNotes"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:inputType="textMultiLine" />

        <Button
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#AED581"
            android:text="Add"
            android:textColor="#fff" />

    </LinearLayout>


</LinearLayout>