<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                card_view:srcCompat="@mipmap/img1" />

            <TextView
                android:id="@+id/trip_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="16dp"
                android:maxLength="12"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/trip_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/trip_time"
                android:layout_alignBottom="@+id/trip_time"
                android:layout_alignParentStart="true"
                android:maxLength="12"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/trip_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trip_name"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="11dp"
                android:layout_toStartOf="@+id/editBtn"
                android:maxLength="10"
                android:textSize="20sp" />

            <ImageButton

                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/trip_time"
                android:layout_alignParentEnd="true"
                card_view:srcCompat="@mipmap/edit" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tripDetails"
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:padding="8dp"
                android:text="@string/From" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_below="@+id/from"
                android:padding="8dp"
                android:text="@string/To" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/to"
                android:padding="8dp"
                android:text="@string/Status" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/notesTxt"
                android:layout_centerHorizontal="true"
                android:layout_margin="48dp"
                android:background="#AED581"
                android:text="Start"
                android:textColor="#fff" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button"
                android:layout_alignParentStart="true"
                android:text="@string/Done" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/from"
                android:layout_alignEnd="@+id/button"
                android:layout_alignStart="@+id/button"
                android:padding="8dp"
                android:text="@string/FromTxt" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/to"
                android:layout_alignEnd="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:padding="8dp"
                android:text="@string/ToTxt" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/status"
                android:layout_alignEnd="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_alignTop="@+id/status"
                android:padding="8dp"
                android:text="@string/StatusTxt" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/status"
                android:padding="8dp"
                android:text="@string/notes" />

            <ListView
                android:id="@+id/notesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:padding="8dp" />

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
